--- a/app/views/performance/setup/transaction/new.html
+++ b/app/views/performance/setup/transaction/new.html
@@ -111,7 +111,7 @@
     <!-- Dependent transactions -->
     <fieldset>
       <legend class="form-label-bold">Transactions dependent on</legend>
-      <p class="form-hint">Transactions which must be completed before starting this one, if any</p>
+      <p class="form-hint">Transactions which must be completed before finishing this one, if any</p>
 
       <!-- Dependent transaction name -->
       <div class="form-group">
