--- a/app/views/performance/setup/transaction/new.html
+++ b/app/views/performance/setup/transaction/new.html
@@ -278,7 +278,7 @@
     </div>
 
     <div class="form-group">
-      <input type="submit" class="button" value="Add transaction">
+      <input type="submit" class="button" value="Save">
     </div>
 
   </form>
