Make drop-down options consistent with spreadsheet

--- a/app/views/performance/setup/transaction/new.html
+++ b/app/views/performance/setup/transaction/new.html
@@ -67,9 +67,24 @@
       <p class="form-hint">Department responsible for meeting this need</p>
       <select class="form-control" id="department">
         <option value=""></option>
-        <option value="DVLA">Department for Transport</option>
-        <option value="HMRC">HM Revenue and Customs</option>
+        <option value="AGO">Attorney General's Office</option>
+        <option value="CO">Cabinet Office</option>
+        <option value="BIS">Department for Business, Innovation and Skills</option>
+        <option value="DCLG">Department for Communities and Local Government</option>
+        <option value="DCMS">Department for Culture, Media, and Sport</option>
+        <option value="DfE">Department for Education</option>
+        <option value="Defra">Department for Environment, Food and Rural Affairs</option>
+        <option value="DFID">Department for International Development</option>
+        <option value="DFT">Department for Transport</option>
+        <option value="DWP">Department for Work and Pensions</option>
+        <option value="DECC">Department of Energy & Climate Change</option>
+        <option value="DH">Department of Health</option>
+        <option value="FCO">Foreign and Commonwealth Office</option>
         <option value="Home Office">Home Office</option>
+        <option value="HMRC">HM Revenue and Customs</option>
+        <option value="HMT">HM Treasury</option>
+        <option value="MOD">Ministry of Defence</option>
+        <option value="MOJ">Ministry of Justice</option>
       </select>
     </div>
 
@@ -79,8 +94,23 @@
       <p class="form-hint">Agency/body responsible for meeting this need (optional)</p>
       <select class="form-control" id="agency-body">
         <option value=""></option>
+        <option value="ACE">Arts Council</option>
+        <option value="BFI">British Film Institute</option>
+        <option value="CPS">Crown Prosecution Service</option>
+        <option value="EH">English Heritage</option>
+        <option value="GC">Gambling Commission</option>
         <option value="GLA">Gangmasters Licensing Authority</option>
+        <option value="GDS">Government Digital Service</option>
+        <option value="GEO">Government Equalities Office</option>
+        <option value="HLF">Heritage Lottery Fund</option>
         <option value="HMPO">HM Passport Office</option>
+        <option value="NCTL">National College for Teaching and Leadership</option>
+        <option value="Ofcom">Ofcom</option>
+        <option value="Ofsted">Office for Standards in Education</option>
+        <option value="Ofqual">Office of Qualifications and Examinations Regulation</option>
+        <option value="sport-england">Sport England</option>
+        <option value="TSol">Treasury Solicitor's Department</option>
+        <option value="visit-england">Visit England</option>
       </select>
     </div>
 
@@ -93,8 +123,13 @@
       <div class="form-group">
         <label class="form-label" for="type">Type</label>
         <select class="form-control" id="type">
-          <option value="payment">Payment</option>
-          <option value="application">Application</option>
+          <option value="booking-events-and-resources">Booking events and resources</option>
+          <option value="making-a-payment">Making a payment</option>
+          <option value="ordering-goods">Ordering goods</option>
+          <option value="registering">Registering</option>
+          <option value="requesting-a-licence-or-consent">Requesting a licence or consent</option>
+          <option value="requesting-benefits-payments-or-loans">Requesting benefits, payments or loans</option>
+          <option value="requesting-information">Requesting information</option>
         </select>
       </div>
 
@@ -102,8 +137,8 @@
       <div class="form-group">
         <label class="form-label" for="theme">Theme</label>
         <select class="form-control" id="theme">
-          <option value="driving">Driving</option>
-          <option value="book-access">Book access to something</option>
+          <option value="business">Business</option>
+          <option value="coming-to-the-uk">Coming to the UK</option>
         </select>
       </div>
     </fieldset>
