--- a/app/views/performance/setup/transaction/new.html
+++ b/app/views/performance/setup/transaction/new.html
@@ -308,79 +308,16 @@
     </div>
 
     <!-- Dependent transactions -->
-    <fieldset>
-      <legend class="form-label-bold">Transactions dependent on</legend>
+    <div class="form-group">
+      <label class="form-label-bold" for="dependent-transaction-name-select">Transactions dependent on</label>
       <p class="form-hint">Transactions which must be completed before finishing this one, if any</p>
-
-      <!-- Dependent transaction name -->
-      <div class="form-group">
-        <label class="form-label" for="dependent-transaction-name-select">Transaction name</label>
-        <select class="form-control" id="dependent-transaction-name-select">
-          <option value=""></option>
-          <option value="1">Access to birth records for adopted adults</option>
-          <option value="2">Adding details to the adoption contact register</option>
-          <option value="3">Apply for a license</option>
-          <option value="4">Licensing system for gangmasters</option>
-        </select>
-      </div>
-
-      <!-- Dependent transaction department -->
-      <div class="form-group">
-        <label class="form-label" for="dependent-transaction-department">Department</label>
-        <p class="form-hint">Department responsible for this transaction</p>
-        <select class="form-control" id="dependent-transaction-department">
-          <option value=""></option>
-          <option value="AGO">Attorney General's Office</option>
-          <option value="CO">Cabinet Office</option>
-          <option value="BIS">Department for Business, Innovation and Skills</option>
-          <option value="DCLG">Department for Communities and Local Government</option>
-          <option value="DCMS">Department for Culture, Media, and Sport</option>
-          <option value="DfE">Department for Education</option>
-          <option value="Defra">Department for Environment, Food and Rural Affairs</option>
-          <option value="DFID">Department for International Development</option>
-          <option value="DFT">Department for Transport</option>
-          <option value="DWP">Department for Work and Pensions</option>
-          <option value="DECC">Department of Energy & Climate Change</option>
-          <option value="DH">Department of Health</option>
-          <option value="FCO">Foreign and Commonwealth Office</option>
-          <option value="Home Office">Home Office</option>
-          <option value="HMRC">HM Revenue and Customs</option>
-          <option value="HMT">HM Treasury</option>
-          <option value="MOD">Ministry of Defence</option>
-          <option value="MOJ">Ministry of Justice</option>
-        </select>
-      </div>
-
-      <!-- Dependent transaction agency -->
-      <div class="form-group">
-        <label class="form-label" for="dependent-transaction-agency">Agency</label>
-        <p class="form-hint">Agency responsible for this transaction (optional)</p>
-        <select class="form-control" id="dependent-transaction-agency">
-          <option value=""></option>
-          <option value="ACE">Arts Council</option>
-          <option value="BFI">British Film Institute</option>
-          <option value="CPS">Crown Prosecution Service</option>
-          <option value="EH">English Heritage</option>
-          <option value="GC">Gambling Commission</option>
-          <option value="GLA">Gangmasters Licensing Authority</option>
-          <option value="GDS">Government Digital Service</option>
-          <option value="GEO">Government Equalities Office</option>
-          <option value="HLF">Heritage Lottery Fund</option>
-          <option value="HMPO">HM Passport Office</option>
-          <option value="NCTL">National College for Teaching and Leadership</option>
-          <option value="Ofcom">Ofcom</option>
-          <option value="Ofsted">Office for Standards in Education</option>
-          <option value="Ofqual">Office of Qualifications and Examinations Regulation</option>
-          <option value="sport-england">Sport England</option>
-          <option value="TSol">Treasury Solicitor's Department</option>
-          <option value="visit-england">Visit England</option>
-        </select>
-      </div>
-
-      <div class="form-group">
-        <a href="#">+ Add another dependency</a>
-      </div>
-    </fieldset>
+      <select class="form-control" id="dependent-transaction-name-select" multiple="multiple">
+        <option value="1">Access to birth records for adopted adults</option>
+        <option value="2">Adding details to the adoption contact register</option>
+        <option value="3">Apply for a license</option>
+        <option value="4">Licensing system for gangmasters</option>
+      </select>
+    </div>
 
     <!-- Data curator -->
     <div class="form-group">
@@ -402,7 +339,7 @@
   </form>
 
   <script type="text/javascript">
-    $('select#department, select#agency-body, select#dependent-transaction-name-select, select#dependent-transaction-department, select#dependent-transaction-agency').select2({
+    $('select#department, select#agency-body, select#dependent-transaction-name-select').select2({
       allowClear: true,
       placeholder: 'Search...'
     });
