--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -2060,3 +2060,41 @@ input[type=number] {
   margin-bottom: 10px;
   list-style-type: none;
 }
+
+.definition-group {
+  padding: 0.5em;
+  font-family: "nta", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.1428571429;
+  font-weight: 400;
+  text-transform: none;
+}
+
+@media (min-width: 641px) {
+  .definition-group {
+    font-size: 16px;
+    line-height: 1.25;
+  }
+}
+
+.definition-group span {
+  font-weight: bold;
+  display: inline-block;
+  margin-bottom: 0.8em;
+}
+
+@media (max-width: 640px) {
+  .definition-group dt::after {
+    content: ":";
+  }
+}
+
+@media (min-width: 641px) {
+  .definition-group dd {
+    margin-bottom: 0.8em;
+  }
+}
+
+.definition-group.dimensions, .definition-group.information {
+  background: #d5e8f3;
+}
