--- a/app/views/performance/index.html
+++ b/app/views/performance/index.html
@@ -239,54 +239,38 @@
     </div>
   </div>
 
-  <dl>
-    <div class="definition-group dimensions">
-      <div class="grid-row">
-        <span class="column-quarter">Characteristics</span>
-        <dt class="column-quarter">Department</dt><dd class="column-half">Morbi ac velit at orci consectetur dignissim sed et odio.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">Agency/Body</dt><dd class="column-half">Donec in dapibus libero, et tempor neque.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">Category</dt><dd class="column-half">Nullam lacinia neque nec dolor consequat finibus.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">Frequency of Interaction</dt><dd class="column-half">Duis quis placerat sapien.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">Transactions Dependent On</dt><dd class="column-half">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">Interaction Components</dt><dd class="column-half">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">GaaP Components</dt><dd class="column-half">Etiam vitae nisl posuere, efficitur nibh nec, mattis mi.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">Manual Activity</dt><dd class="column-half">Nunc in erat ac metus auctor rhoncus.</dd>
-        </div>
-      </div>
-    </div>
+  <div class="group definition-group dimensions">
+    <h3>Characteristics</h3>
+    <dl>
+      <dt>Department</dt><dd>Morbi ac velit at orci consectetur dignissim sed et odio.</dd>
+      <dt>Agency/Body</dt><dd>Donec in dapibus libero, et tempor neque.</dd>
+      <dt>Category</dt><dd>Nullam lacinia neque nec dolor consequat finibus.</dd>
+      <dt>Frequency of Interaction</dt><dd>Duis quis placerat sapien.</dd>
+      <dt>Transactions Dependent On</dt><dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
+      <dt>Interaction Components</dt><dd>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</dd>
+      <dt>GaaP Components</dt><dd>Etiam vitae nisl posuere, efficitur nibh nec, mattis mi.</dd>
+      <dt>Manual Activity</dt><dd>Nunc in erat ac metus auctor rhoncus.</dd>
+    </dl>
+  </div>
 
-    <div class="definition-group facts">
-      <div class="grid-row">
-        <span class="column-quarter">Performance indicators</span>
-        <dt class="column-quarter">Started Transactions</dt><dd class="column-half">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">Completed Transactions</dt><dd class="column-half">Nullam ac elit at leo egestas congue.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">Total Processing Cost</dt><dd class="column-half">Duis quis placerat sapien.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">Cost % Operational Spend</dt><dd class="column-half">Vivamus sit amet mi vel neque mollis feugiat.</dd>
-      </div>
-    </div>
+  <div class="group definition-group facts">
+    <h3>Performance indicators</h3>
+    <dl>
+      <dt>Started Transactions</dt><dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
+      <dt>Completed Transactions</dt><dd>Nullam ac elit at leo egestas congue.</dd>
+      <dt>Total Processing Cost</dt><dd>Duis quis placerat sapien.</dd>
+      <dt>Cost % Operational Spend</dt><dd>Vivamus sit amet mi vel neque mollis feugiat.</dd>
+    </dl>
+  </div>
 
-    <div class="definition-group information">
-      <div class="grid-row">
-        <span class="column-quarter">Background information</span>
-        <dt class="column-quarter">User Need</dt><dd class="column-half">Sed pharetra, quam sit amet dignissim luctus, lacus enim rutrum libero, a viverra odio lorem sed erat.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">URL</dt><dd class="column-half">Duis quis placerat sapien.</dd>
-        <span class="column-quarter">&nbsp;</span>
-        <dt class="column-quarter">Data Curator</dt><dd class="column-half">Morbi ac velit at orci consectetur dignissim sed et odio.</dd>
-      </div>
-    </div>
-  </dl>
-
+  <div class="group definition-group information">
+    <h3>Background information</h3>
+    <dl>
+      <dt>User Need</dt><dd>Sed pharetra, quam sit amet dignissim luctus, lacus enim rutrum libero, a viverra odio lorem sed erat.</dd>
+      <dt>URL</dt><dd>Duis quis placerat sapien.</dd>
+      <dt>Data Curator</dt><dd>Morbi ac velit at orci consectetur dignissim sed et odio.</dd>
+    </dl>
+  </div>
 
   <h2 class="heading-medium">Other data resources</h2>
 
